--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,8 @@
         <activity android:name=".DetailInvoiceActivity" />
         <activity android:name=".RowDetailInvoiceActivity" />
         <activity android:name=".RowOweActivity" />
+        <activity android:name=".DetailOweActivity" />
+        <activity android:name=".RowDetailOweActivity"></activity>
     </application>
 
 </manifest>
